[project]
name = "memory-whole"
version = "0.5.0"
description = "Self-hosted news intelligence — track how stories rise, persist, and vanish across 36 sources."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Greg" }]
keywords = ["news", "rss", "media-bias", "nlp", "dashboard"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]
dependencies = [
  "feedparser>=6.0.11",
  "PyYAML>=6.0.1",
  "vaderSentiment>=3.3.2",
  "scikit-learn>=1.2.2",
  "numpy>=1.26.0",
  "rapidfuzz>=3.14.0",
  "sentence-transformers>=5.5.1",
  "hdbscan>=0.8.44",
  "faiss-cpu>=1.14.2",
]

[project.optional-dependencies]
dev = [
  "black>=23.9.1",
  "ruff>=0.15.2",
  "pytest>=8.0",
]

[project.scripts]
memory-whole = "rss_reader:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
exclude = ["output", "venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
extend-ignore = ["E203", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.main]
ignore = ["output", ".venv", "venv", "build", "dist"]

[tool.pylint.messages_control]
# Suppress architectural noise we're not restructuring right now
disable = [
  "C0301",  # line-too-long  (ruff/black own line length)
  "C0302",  # too-many-lines
  "C0116",  # missing-function-docstring
  "R0902",  # too-many-instance-attributes
  "R0912",  # too-many-branches
  "R0913",  # too-many-arguments
  "R0914",  # too-many-local-variables
  "R0915",  # too-many-statements
  "R0917",  # too-many-positional-arguments
  "R1716",  # chained-comparison (style preference)
]

[tool.pylint.format]
max-line-length = 120
